--- a/Contact.html
+++ b/Contact.html
@@ -27,9 +27,9 @@
     </div>
     <div class="c2-container">
     <form action="https://formspree.io/mdodgjzb" method="POST">
-        <input value= "Name" type="text" name="_replyto">
-    <input value="Email" type="text" name="_replyto">
-    <textarea name="message">Message</textarea>
+        <input placeholder= "Name" type="text" name="name">
+    <input placeholder="Email" type="text" name="_replyto">
+    <textarea placeholder="Message"name="message"></textarea>
 <button type="submit">Send</button>
 </form>
 </div>
