mobile case study updates

--- a/Billow.html
+++ b/Billow.html
@@ -35,7 +35,6 @@
         <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
       </div>
     </section>
-    <hr class="orange-divider">
 
 
 
@@ -52,12 +51,11 @@
       customization that optimize the collaborative process.
     </div>
     </section>
-    <hr class="section-divider2">
 
     <section class="solution">
       <h2>Solution</h2>
       <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
-      <div class= "solution-p"
+      <div class= "solution-p">
       <p>Billow is a cloud storage service that offers users the ability to
       customize content organization by providing an initial folder setup
       based on their needs as individuals, freelancers, or business teams. Users
@@ -65,7 +63,7 @@
       content, uploading files as well as sharing and collaborating in real-time. These
       solutions reduce the drag for users of having to figure out how to organize
       their files and content as well as reducing the amount of external communication
-       with real-time collaboration tools.
+       with real-time collaboration tools.</p>
      </div>
     </section>
 
@@ -83,7 +81,6 @@
       </div>
         <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
     </section>
-  <hr class="section-divider2">
 
     <section class="user-personas">
       <h2>User Personas</h2>
@@ -124,7 +121,6 @@
 </div>
   </section>
 
-      <hr class="section-divider2">
 
     <section class="ia">
       <h2>Information Architecture</h2>
@@ -208,7 +204,7 @@
         file organization, collaboration and sharing options, security, and creating documents.
       </p>
     </section>
-      <hr class="ca-divider">
+
 
 
   <section class="wireframes">
@@ -236,7 +232,6 @@
   confusion</p>
   <p>- Adding file/folder information on the dashboard (list view) as suggested by Manuel</p>
   </section>
-  <hr class="section-divider2">
 
 <section class="brand-1">
   <h2>Designing the logo to evoke a feeling of Ease </h2>
@@ -269,7 +264,6 @@
     <img src="images/billow-brand.png" alt="Billow Brand">
 </div>
 </section>
-<hr class="section-divider2">
 
 <section class="hf-mock">
   <div class="hf-mock1">
