--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
       <img class="icon" src="images/bauhaus-graphic.png" alt="bauhaus icon" align="right">
     <div class="intro-text">
       <h1> Hi, I’M Julianna a UX Designer
-    <br> Based in Brooklyn, New York </h1>
+    Based in Brooklyn, New York </h1>
   </div>
     </section>
 
