--- a/BusyBus.html
+++ b/BusyBus.html
@@ -14,9 +14,9 @@
     <section>
       <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
-      <a href="Index">Work</a>
-      <a  class="active" href="#about">About</a>
-      <a href="#contact">Contact</a>
+      <a href="Index.html">Work</a>
+      <a  class="active" href="About.html">About</a>
+      <a href="Contact.html">Contact</a>
       </nav>
     </section>
     <section class="bb-main">
