--- a/Index.html
+++ b/Index.html
@@ -8,18 +8,36 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Public+Sans:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
-    <div class= "container">
-    <section class="main-menu">
-      <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
-      <nav class="topnav">
-      <a class="active" href="Index.html">Work</a>
-      <a href="About.html">About</a>
-      <a href="Contact.html">Contact</a>
-      </nav>
-    </section>
+<!-- Top Navigation Menu -->
+<div class= "container">
+<section class="main-menu">
+  <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+  <nav class="topnav">
+  <a class="active" href="Index.html">Work</a>
+  <a href="About.html">About</a>
+  <a href="Contact.html">Contact</a>
+  </nav>
+</section>
+
+<!-- Navigation links (hidden by default) -->
+<div id="myLinks">
+  <a href="Work.html">Work</a>
+  <a href="Contact.html">Contact</a>
+  <a href="About.html">About</a>
+</div>
+<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+  <i class="fa fa-bars"></i>
+</a>
+</div>
+
+
+
 
     <section class="main-banner">
       <img class="icon" src="images/bauhaus-graphic.png" alt="bauhaus icon" align="right">
