--- a/Billow.html
+++ b/Billow.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Public+Sans:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
 
+  <script src="js/mobilenav.js"></script>
+
   <body>
     <a name="top"></a>
     <div class= "container">
@@ -20,6 +22,21 @@
       <a href="Contact.html">Contact</a>
       </nav>
     </section>
+
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <div class="mobilenav" id="mymobilenav">
+      <a href="Index.html">Work</a>
+      <a href="About.html">About</a>
+      <a href="Contact.html">Contact</a>
+    </div>
+    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+
+
 
     <section class="billow-banner">
       <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" >
@@ -297,7 +314,7 @@
 <section class="pref-test">
   <h2>Preference testing</h2>
   <p>After receiving feedback from user testing interviews, I ran a preference test to get
-  <br>even more clarity around specific items of the user interface.</p>
+  even more clarity around specific items of the user interface.</p>
   <div class="pref-test2">
     <img src="images/usertest1.png" alt="Billow User Test 1">
     <img src="images/usertest2.png" alt="Billow User Test 2">
@@ -342,8 +359,8 @@ as well as integrations (Design Tools, Project Management, Calendars) so that us
     <!-- Copyright -->
   <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
   <div class="footer-right">
-    <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
-    <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+    <a href="https://github.com/julsrodd"><img src="images/github-icon.png" alt="github"></a>
+    <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="images/linkedin-icon.png" alt="linkedin"></a>
     <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
   </div>
   </section>
