--- a/Contact.html
+++ b/Contact.html
@@ -9,15 +9,33 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Public+Sans:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
+
+  <script src="js/mobilenav.js"></script>
+
 <body>
   <div class= "container">
   <section class="main-menu">
     <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
     <nav class="topnav">
-    <a class="active" href="Index.html">Work</a>
+    <a href="Contact.html">Work</a>
     <a href="About.html">About</a>
-    <a href="Contact.html">Contact</a>
+    <a class="active" href="Contact.html">Contact</a>
     </nav>
+
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <div class="mobilenav" id="mymobilenav">
+      <a href="Contact.html">Work</a>
+      <a href="About.html">About</a>
+      <a class="active" href="Contact.html">Contact</a>
+    </div>
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+
+
   </section>
   <section class="contact-cta">
     <div class="left-cta">
