--- a/Index.html
+++ b/Index.html
@@ -59,9 +59,12 @@
       <a href="Billow.html">View Case Study</a>
       </div>
       <div class= "b2-container">
-      <i class= "billow-image"><img src=images/billow-image.png alt="billow App"></i>
+      <i class= "billow-image"><img src="images/billow-image.png" alt="billow App"></i>
       </div>
     </section>
+
+
+
 
     <section class="busybus-project">
       <i class="right-square"><img src="images/right-rectangle.png" alt=""></i>
