--- a/Index.html
+++ b/Index.html
@@ -68,14 +68,11 @@
 
     <section class="busybus-project">
       <i class="right-square"><img src="images/right-rectangle.png" alt=""></i>
-        <i class= "busybus-image"><img src=images/iphone-busybus.png alt="busybus app"></i>
+        <i class= "busybus-image"><img src="images/iphone-busybus.png" alt="busybus app"></i>
       <div class="b3-container">
         <h3>BusyBus</h3>
         <p>UX Design, Visual design, user research & testing</p>
         <a href="BusyBus.html">View Project</a>
-      </div>
-      <div class="b4-container">
-
       </div>
 
     </section>
