--- a/BusyBus.html
+++ b/BusyBus.html
@@ -13,7 +13,7 @@
   <body>
     <div class= "container">
     <section>
-      <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+      <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
       <a href="Index.html">Work</a>
       <a  class="active" href="About.html">About</a>
@@ -33,7 +33,7 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
-  
+
     <section class="bb-main">
       <img src="images/busybus-final.png" alt="BusyBus Final">
       <div class="bb-intro">
