--- a/About.html
+++ b/About.html
@@ -26,7 +26,7 @@
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <div class="mobilenav" id="mymobilenav">
-    <a href="Index.html">WORK</a>
+    <a href="index.html">WORK</a>
     <a class="active" href="About.html">ABOUT</a>
     <a href="Contact.html">CONTACT</a>
   </div>
