--- a/Billow.html
+++ b/Billow.html
@@ -15,7 +15,7 @@
     <a name="top"></a>
     <div class= "container">
     <section class="main-menu">
-      <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+      <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
       <a href="Index.html">Work</a>
       <a href="About.html">About</a>
