--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
 <body>
   <div class= "container">
   <section class="main-menu">
-    <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
+    <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
     <nav class="topnav">
     <a href="Contact.html">Work</a>
     <a href="About.html">About</a>
