--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Top Navigation Menu -->
 <div class= "container">
 <section class="main-menu">
-  <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+  <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
   <nav class="topnav">
   <a class="active" href="Index.html">Work</a>
   <a href="About.html">About</a>
