--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section class="main-menu">
   <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
   <nav class="topnav">
-  <a class="active" href="Index.html">Work</a>
+  <a class="active" href="index.html">Work</a>
   <a href="About.html">About</a>
   <a href="Contact.html">Contact</a>
   </nav>
