--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <a href="Billow.html">View Case Study</a>
       </div>
       <div class= "b2-container">
-      <i class= "billow-image"><img src="images/Billow-image.png" alt="billow App"></i>
+      <i class= "billow-image"><img src="images/billow-image.png" alt="billow App"></i>
       </div>
     </section>
 
