--- a/About.html
+++ b/About.html
@@ -15,9 +15,9 @@
 <body>
   <div class= "container">
   <section>
-  <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+  <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
     <nav class="topnav">
-    <a href="Index.html">Work</a>
+    <a href="index.html">Work</a>
     <a class="active" href="About.html">ABOUT</a>
     <a href="Contact.html">Contact</a>
     </nav>
