busybus index update

--- a/BusyBus.html
+++ b/BusyBus.html
@@ -15,7 +15,7 @@
     <section>
       <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
-      <a href="Index.html">Work</a>
+      <a href="index.html">Work</a>
       <a  class="active" href="About.html">About</a>
       <a href="Contact.html">Contact</a>
       </nav>
@@ -24,7 +24,7 @@
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="mobilenav" id="mymobilenav">
-      <a href="Index.html">Work</a>
+      <a href="index.html">Work</a>
       <a href="About.html">About</a>
       <a href="Contact.html">Contact</a>
     </div>
