--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="mobilenav" id="mymobilenav">
-      <a href="Contact.html">Work</a>
+      <a href="index.html">Work</a>
       <a href="About.html">About</a>
       <a class="active" href="Contact.html">Contact</a>
     </div>
