homepage html updates

--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
 
 
     <section class="busybus-project">
-      <i class="right-square"><img src="images/right-rectangle.png" alt=""></i>
-        <i class= "busybus-image"><img src="images/iphone-busybus.png" alt="busybus app"></i>
+        <img class= "busybus-image"><img src="images/iphone-busybus.png" alt="busybus app">
       <div class="b3-container">
         <h3>BusyBus</h3>
         <p>UX Design, Visual design, user research & testing</p>
-        <a href="BusyBus.html">View Project</a>
+          <a href="BusyBus.html">View Project</a>
       </div>
-
+      <div class="sq-container">
+      <img class="right-square"><img src="images/right-rectangle.png" alt="black bar">          
+      </div>
     </section>
 
 
