html and css updates

--- a/Contact.html
+++ b/Contact.html
@@ -15,6 +15,7 @@
 <body>
   <div class= "container">
   <section class="main-menu">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
     <nav class="topnav">
     <a href="Contact.html">Work</a>
