--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
       <a href="Billow.html">View Case Study</a>
       </div>
       <div class= "b2-container">
-    <!--<i class= "billow-image">
-      </i>--->
         <img class= "billow-image" src="images/billow-image.png" alt="billow App">
       </div>
     </section>
+    <!--<i class= "billow-image">
+      </i>--->
+
 
     <section class="busybus-project">
-        <img class= "busybus-image"><img src="images/iphone-busybus.png" alt="busybus app">
+        <div class= "busybus-image"><img src="images/iphone-busybus.png" alt="busybus app"></div>
       <div class="b3-container">
         <h3>BusyBus</h3>
         <p>UX Design, Visual design, user research & testing</p>
