--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 <section class="main-menu">
   <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
   <nav class="topnav">
-  <a class="active" href="index.html">Work</a>
+  <a class="active" href="#projects">Work</a>
   <a href="About.html">About</a>
   <a href="Contact.html">Contact</a>
   </nav>
 </section>
+
 
 <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,6 +49,7 @@
     </section>
 
     <section class="projects">
+      <a name="projects"></a>
       <h2>PROJECTS</h2>
     </section>
 
