--- a/Billow.html
+++ b/Billow.html
@@ -366,5 +366,6 @@ as well as integrations (Design Tools, Project Management, Calendars) so that us
   </div>
   </section>
 </footer>
+</div>
   </body>
 </html>
