--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
-</div>
+
 
 
 
@@ -57,7 +57,7 @@
       <i class="left-square"><img src="images/left-rectangle.png" alt="Orange Box"></i>
       <div class= "b1-container">
       <h3>Billow</h3>
-      <p>UX Design, Visual design, user research & testing</p>
+      <h4>UX Design, Visual design, user research & testing</h4>
       <a href="Billow.html">View Case Study</a>
       </div>
       <div class= "b2-container">
@@ -72,7 +72,7 @@
         <div class= "busybus-image"><img src="images/iphone-busybus.png" alt="busybus app"></div>
       <div class="b3-container">
         <h3>BusyBus</h3>
-        <p>UX Design, Visual design, user research & testing</p>
+        <h4>UX Design, Visual design, user research & testing</h4>
           <a href="BusyBus.html">View Project</a>
       </div>
       <div class="sq-container">
