--- a/BusyBus.html
+++ b/BusyBus.html
@@ -43,7 +43,6 @@
         <p>Deliverables: User Surveys, Competitive Analysis, User Stories, Paper Prototype, Wireframes, User Testing, Visual Design</p>
         <a href="#">View Prototype</a>
       </div>
-
     </section>
 
 
@@ -168,5 +167,6 @@
         </div>
         </section>
       </footer>
+    </div>
   </body>
 </html>
