--- a/BusyBus.html
+++ b/BusyBus.html
@@ -71,8 +71,8 @@
     <section class="bb-comp">
       <h3>COMPETITIVE ANALYSIS</h3>
       <div class="bbcomp-img">
-      <img src="/images/googlemaps.png" alt="Google Maps Logo">
-      <img src="/images/transit-app.png" alt="Transit App Logo">
+      <img src="images/googlemaps.png" alt="Google Maps Logo">
+      <img src="images/transit-app.png" alt="Transit App Logo">
     </div>
        <p> I analyzed Google Maps and Transit app, my overall perception was that one of these two competitors
           would solve and/or cover the needs of bus riders but to my surprise, none of them really do which indicates that BusyBus
