--- a/Billow.html
+++ b/Billow.html
@@ -18,7 +18,7 @@
     <section class="main-menu">
       <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
-      <a href="index.html">Work</a>
+      <a href="index.html#projects">Work</a>
       <a href="About.html">About</a>
       <a href="Contact.html">Contact</a>
       </nav>
