--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
     <nav class="topnav">
-    <a href="Contact.html">Work</a>
+    <a href="index.html#projects">Work</a>
     <a href="About.html">About</a>
     <a class="active" href="Contact.html">Contact</a>
     </nav>
