--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
   <section>
   <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
     <nav class="topnav">
-    <a href="index.html">Work</a>
+    <a href="index.html#projects">Work</a>
     <a class="active" href="About.html">ABOUT</a>
     <a href="Contact.html">Contact</a>
     </nav>
