--- a/BusyBus.html
+++ b/BusyBus.html
@@ -16,7 +16,7 @@
     <section>
       <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
-      <a href="index.html">Work</a>
+      <a href="index.html#projects">Work</a>
       <a  class="active" href="About.html">About</a>
       <a href="Contact.html">Contact</a>
       </nav>
