--- a/Billow.html
+++ b/Billow.html
@@ -208,9 +208,15 @@
     <section class="ca-section">
       <h3>Competitive Analysis</h3>
       <div class="competitors">
-      <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
+        <div class="comp1">
+          <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
+        </div>
+      <div class="comp2">
       <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
-      <img class="competitor" src="images/evernote.png" alt="Evernote" >
+      </div>
+      <div class="comp3">
+        <img class="competitor" src="images/evernote.png" alt="Evernote" >
+      </div>
     </div>
       <p>After completing this analysis, I realized that each of these apps has different advantages according
         to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
