--- a/Billow.html
+++ b/Billow.html
@@ -53,9 +53,9 @@
       <div class="b-container">
         <h1> Billow </h1>
         <p>
-        <strong>Role:</strong> Ux, Designer, Visual Designer, UX Research </p>
-        <p><strong>Tools:</strong> Figma, Invision, USabilityHub</p>
-        <p><strong>Deliverables:</strong> User Surveys, Personas, Competitive Analysis,
+        <b>Role</b> Ux, Designer, Visual Designer, UX Research </p>
+        <p><b>Tools</b> Figma, Invision, UsabilityHub</p>
+        <p><b>Deliverables</b> User Surveys, Personas, Competitive Analysis,
         User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
         Design </p>
         <br>
