--- a/Billow.html
+++ b/Billow.html
@@ -106,7 +106,7 @@
         The survey was completed by 19 participants.</p>
         <p><a href="#">View results</a></p>
       </div>
-        <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
+        <img class="insights" src="images/billow-insights.jpg" alt="Billow Insights" ></a>
     </section>
 
     <section class="user-personas">
