--- a/Billow.html
+++ b/Billow.html
@@ -119,10 +119,10 @@
 
     <section class="up-2">
       <div class="mariap-container">
-      <img class="user-persona" src="images/mariap.png" alt="Maria User Persona" ></a>
-      <p><strong>Maria P.</strong>
+      <img class="user-persona" src="images/mariap.svg" alt="Maria User Persona" ></a>
+      <p><b>Maria P.</b>
       <p>Ux Designer</p>
-      <p>Age: 27/Location: Seattle, WA</p>
+      <p><b>Age</b> 27/<b>Location</b> Seattle, WA</p>
       <p>María is a UX designer based in Seattle,
       Washington. She splits her time between working
       at a design studio full time and developing her
@@ -132,10 +132,10 @@
       especially if they will meet her needs.</p>
     </div>
       <div class="luisr">
-      <img class="user-persona" src="images/luisr.png" alt="Luis User Persona" ></a>
-      <p>Luis R.</p>
+      <img class="user-persona" src="images/luisr.svg" alt="Luis User Persona" ></a>
+      <p><b>Luis R.</b></p>
       <p>Ux Designer </p>
-      <p>Age: 31/Location: Brooklyn, NY</p>
+      <p><b>Age</b> 31/<b>Location</b> Brooklyn, NY</p>
       <p>Luis has been a copywriter for 6+ years and is
       currently based in New York. Outside of work,
       he’s a music enthusiasts and enjoys going to
@@ -243,7 +243,7 @@
   <section class="wireframes">
     <h2>Wireframes</h2>
     <div class="wf-container">
-    <img class="wireframes" src="images/wireframesketches.png" alt="Billow Wireframe Sketches" >
+    <img class="wireframes" src="images/wireframesketches.jpeg" alt="Billow Wireframe Sketches" >
     <img class="wireframes" src="images/wireframes-lowfi.png" alt="Billow Low Fi Wireframes" >
   </div>
   <div class="wf-2">
@@ -294,7 +294,7 @@
     <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
   </div>
 <div class="billow-brand">
-    <img src="images/billow-brand.png" alt="Billow Brand">
+    <img src="images/billow-brand.jpg" alt="Billow Brand">
 </div>
 </section>
 
