mobile nav updates

--- a/Billow.html
+++ b/Billow.html
@@ -33,7 +33,7 @@
       </nav>
     </section>
 
-    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="mobilenav" id="mymobilenav">
       <a href="index.html">Work</a>
@@ -41,11 +41,28 @@
       <a href="Contact.html">Contact</a>
     </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
+ -->
 
+ <!-- The overlay -->
+ <div id="myNav" class="overlay">
+
+   <!-- Button to close the overlay navigation -->
+   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+   <!-- Overlay content -->
+   <div class="overlay-content">
+     <a href="index.html#projects">Work</a>
+     <a class="active" href="About.html">About</a>
+     <a href="Contact.html">Contact</a>
+   </div>
+
+ </div>
+
+ <span class="mobilenavs" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
 
     <section class="billow-banner">
@@ -166,7 +183,7 @@
           </tr>
           <tr>
           <td >As a new user</td>
-          <td>Choose initial Folder Organization</td>
+          <td>Choose initial folder organization</td>
           <td>High</td>
           </tr>
           <tr>
@@ -207,7 +224,7 @@
           <tr>
           <td>As a returning user</td>
           <td>Sign in</td>
-          <td>low</td>
+          <td>Low</td>
           </tr>
         </table>
         <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
