--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
     <a class="active" href="Contact.html">Contact</a>
     </nav>
 
-    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="mobilenav" id="mymobilenav">
       <a href="index.html">Work</a>
@@ -41,11 +41,26 @@
     </div>
       </section>
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <!--   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
-      </a>
+      </a> -->
 
+      <!-- The overlay -->
+      <div id="myNav" class="overlay">
 
+        <!-- Button to close the overlay navigation -->
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+        <!-- Overlay content -->
+        <div class="overlay-content">
+          <a class="active" href="index.html">Work</a>
+          <a href="About.html">About</a>
+          <a href="Contact.html">Contact</a>
+        </div>
+
+      </div>
+
+      <span class="mobilenavs" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
 
   <section class="contact-cta">
