--- a/About.html
+++ b/About.html
@@ -28,22 +28,40 @@
   <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
     <nav class="topnav">
     <a href="index.html#projects">Work</a>
-    <a class="active" href="About.html">ABOUT</a>
+    <a class="active" href="About.html">About</a>
     <a href="Contact.html">Contact</a>
     </nav>
   </section>
 
-  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+  <!-- Load an icon library to show a hamburger menu (bars) on small screens
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <div class="mobilenav" id="mymobilenav">
     <a href="index.html">WORK</a>
     <a class="active" href="About.html">ABOUT</a>
     <a href="Contact.html">CONTACT</a>
   </div>
-  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+  "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+<!--  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
-  </a>
+  </a> -->
+
+
+  <!-- The overlay -->
+  <div id="myNav" class="overlay">
+
+    <!-- Button to close the overlay navigation -->
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+    <!-- Overlay content -->
+    <div class="overlay-content">
+      <a href="index.html#projects">Work</a>
+      <a class="active" href="About.html">About</a>
+      <a href="Contact.html">Contact</a>
+    </div>
+
+  </div>
+
+  <span class="mobilenavs" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
 
     <section class="about-main">
