--- a/Billow.html
+++ b/Billow.html
@@ -234,13 +234,13 @@
     <section class="ca-section">
       <h3>Competitive Analysis</h3>
       <div class="competitors">
-        <div class="comp1">
+        <div class="airtable">
           <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
         </div>
-      <div class="comp2">
+      <div class="drive">
       <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
       </div>
-      <div class="comp3">
+      <div class="evernote">
         <img class="competitor" src="images/evernote.png" alt="Evernote" >
       </div>
     </div>
