--- a/Billow.html
+++ b/Billow.html
@@ -123,7 +123,39 @@
         The survey was completed by 19 participants.</p>
         <p><a href="#">View results</a></p>
       </div>
-        <img class="insights" src="images/billow-insights.jpg" alt="Billow Insights" ></a>
+      <div class="insights1">
+        <h2>85.5%</h2>
+        <p>Use cloud storage</p>
+        <h4>47.1%</h4>
+        <p>Are not satisfied with their current cloud storage service</p>
+        <h4>58.8%</h4>
+        <p>Said that standard folder organization is very important</p>
+        <p><b>Most important
+features:</b></p>
+<ul>
+  <li>Cost</li>
+  <li>Uploading files</li>
+  <li>Creating content</li>
+<li>Collaboration</li>
+</ul>
+
+<p><b>Frequent issues:</b></p>
+<ul>
+  <li>Storage space</li>
+  <li>Too expensive</li>
+  <li>Trouble uploading and sharing files</li>
+</ul>
+
+<p><b>Most used features (on a weekly basis):</b></p>
+<ul>
+  <li>Creating content</li>
+  <li>Sharing content</li>
+  <li>Collaborating</li>
+</ul>
+
+
+    <!--  </div>
+        <img class="insights" src="images/billow-insights.jpg" alt="Billow Insights" ></a> -->
     </section>
 
     <section class="user-personas">
