--- a/Billow.html
+++ b/Billow.html
@@ -124,34 +124,49 @@
         <p><a href="#">View results</a></p>
       </div>
       <div class="insights1">
-        <h2>85.5%</h2>
-        <p>Use cloud storage</p>
-        <h4>47.1%</h4>
-        <p>Are not satisfied with their current cloud storage service</p>
-        <h4>58.8%</h4>
-        <p>Said that standard folder organization is very important</p>
-        <p><b>Most important
-features:</b></p>
-<ul>
-  <li>Cost</li>
-  <li>Uploading files</li>
-  <li>Creating content</li>
-<li>Collaboration</li>
-</ul>
+        <div class="i1">
+          <h2>85.5%</h2>
+          <p>Use cloud storage</p>
+        </div>
+<div class="i2">
+  <h3>47.1%</h3>
+  <p>Are not satisfied with their current cloud storage service</p>
+</div>
+<div class="i3">
+  <h3>58.8%</h3>
+  <p>Said that standard folder organization is very important</p>
+</div>
 
-<p><b>Frequent issues:</b></p>
-<ul>
-  <li>Storage space</li>
-  <li>Too expensive</li>
-  <li>Trouble uploading and sharing files</li>
-</ul>
+  <div class="i4">
+    <p><b>Most important
+  features:</b></p>
+  <ul>
+    <li>Cost</li>
+    <li>Uploading files</li>
+    <li>Creating content</li>
+  <li>Collaboration</li>
+  </ul>
+</div>
 
-<p><b>Most used features (on a weekly basis):</b></p>
-<ul>
-  <li>Creating content</li>
-  <li>Sharing content</li>
-  <li>Collaborating</li>
-</ul>
+<div class="">
+  <p><b>Frequent issues:</b></p>
+  <ul>
+    <li>Storage space</li>
+    <li>Too expensive</li>
+    <li>Trouble uploading and sharing files</li>
+  </ul>
+</div>
+
+<div class="">
+  <p><b>Most used features (on a weekly basis):</b></p>
+  <ul>
+    <li>Creating content</li>
+    <li>Sharing content</li>
+    <li>Collaborating</li>
+  </ul>
+</div>
+</div>
+
 
 
     <!--  </div>
