--- a/Billow.html
+++ b/Billow.html
@@ -124,19 +124,21 @@
         <p><a href="#">View results</a></p>
       </div>
       <div class="insights1">
-        <div class="i1">
-          <h2>85.5%</h2>
-          <p>Use cloud storage</p>
+        <div class="ic1">
+          <div class="i1">
+            <h2>85.5%</h2>
+            <p>Use cloud storage</p>
+          </div>
+  <div class="i2">
+    <h3>47.1%</h3>
+    <p>Are not satisfied with their current cloud storage service</p>
+  </div>
+  <div class="i3">
+    <h3>58.8%</h3>
+    <p>Said that standard folder organization is very important</p>
+  </div>
         </div>
-<div class="i2">
-  <h3>47.1%</h3>
-  <p>Are not satisfied with their current cloud storage service</p>
-</div>
-<div class="i3">
-  <h3>58.8%</h3>
-  <p>Said that standard folder organization is very important</p>
-</div>
-
+<div class="ic2">
   <div class="i4">
     <p><b>Most important
   features:</b></p>
@@ -148,7 +150,7 @@
   </ul>
 </div>
 
-<div class="">
+<div class="i5">
   <p><b>Frequent issues:</b></p>
   <ul>
     <li>Storage space</li>
@@ -157,13 +159,14 @@
   </ul>
 </div>
 
-<div class="">
+<div class="i6">
   <p><b>Most used features (on a weekly basis):</b></p>
   <ul>
     <li>Creating content</li>
     <li>Sharing content</li>
     <li>Collaborating</li>
   </ul>
+</div>
 </div>
 </div>
 
