--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <i class="left-square"><img src="images/left-rectangle.png" alt="Orange Box"></i>
       <div class= "b1-container">
       <h3>Billow</h3>
-      <h4>UX Design, Visual design, user research & testing</h4>
+      <h4>UX Design, Visual Design, User Research & Testing</h4>
       <a href="Billow.html">View Case Study</a>
       </div>
       <div class= "b2-container">
@@ -100,7 +100,7 @@
         <div class= "busybus-image"><img src="images/iphone-busybus.png" alt="busybus app"></div>
       <div class="b3-container">
         <h3>BusyBus</h3>
-        <h4>UX Design, Visual design, user research & testing</h4>
+        <h4>UX Design, Visual Design, User Research & Testing</h4>
           <a href="BusyBus.html">View Project</a>
       </div>
       <div class="sq-container">
