--- a/Billow.html
+++ b/Billow.html
@@ -401,9 +401,9 @@
   <p>After receiving feedback from user testing interviews, I ran a preference test to get
   even more clarity around specific items of the user interface.</p>
   <div class="pref-test2">
-    <img src="images/usertest1.png" alt="Billow User Test 1">
-    <img src="images/usertest2.png" alt="Billow User Test 2">
-    <img src="images/usertest3.png" alt="Billow User Test 3">
+    <img src="images/usertest1.jpg" alt="Billow User Test 1">
+    <img src="images/usertest2.jpg" alt="Billow User Test 2">
+    <img src="images/usertest3.jpg" alt="Billow User Test 3">
   </div>
 </section>
 
