--- a/Billow.html
+++ b/Billow.html
@@ -383,14 +383,16 @@
    test on similar tasks to make sure that users understand and are
    able to use the app seamlessly.</p>
   <p>Key takeaways:</p>
-  <p>- Change colors on bottom CTA on the homepage so they are easier
-  to read</p>
-  <p>- Add icons or some text on the first enrollment screen so that users
-  understand what choosing a free account versus a paid one entails.</p>
-  <p>- Adding the option to see “date created” on the list view of the
-  dashboard</p>
-  <p>- Revise link sharing options on sharing screen
-  </p>
+  <ul>
+    <li>Change colors on bottom CTA on the homepage so they are easier
+     to read</li>
+   <li>Add icons or some text on the first enrollment screen so that users
+   understand what choosing a free account versus a paid one entails.</li>
+   <li>Adding the option to see “date created” on the list view of the
+   dashboard</li>
+   <li>Revise link sharing options on sharing screen</li>
+ </ul>  
+
 </div>
   <div class="hf-mock2">
   <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
