--- a/Billow.html
+++ b/Billow.html
@@ -186,7 +186,8 @@
 
     <section class="up-2">
       <div class="mariap-container">
-      <img class="user-persona" src="images/mariap.svg" alt="Maria User Persona" ></a>
+        <img src="images/mariapdoc.jpg" alt="Maria User Persona">
+      <img class="user-persona" src="images/mariap.svg" alt="Maria User Persona" >
       <p><b>Maria P.</b>
       <p>Ux Designer</p>
       <p><b>Age</b> 27/<b>Location</b> Seattle, WA</p>
@@ -391,7 +392,7 @@
    <li>Adding the option to see “date created” on the list view of the
    dashboard</li>
    <li>Revise link sharing options on sharing screen</li>
- </ul>  
+ </ul>
 
 </div>
   <div class="hf-mock2">
