--- a/Billow.html
+++ b/Billow.html
@@ -124,6 +124,8 @@
         <p><a href="#">View results</a></p>
       </div>
       <div class="insights1">
+        <canvas id="myChart"></canvas>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
         <div class="ic1">
           <div class="i1">
             <h2>85.5%</h2>
@@ -186,7 +188,7 @@
 
     <section class="up-2">
       <div class="mariap-container">
-        <img src="images/mariapdoc.jpg" alt="Maria User Persona">
+        <!--   <img class="mariap-test"src="images/mariapdoc.jpg" alt="Maria User Persona"> -->
       <img class="user-persona" src="images/mariap.svg" alt="Maria User Persona" >
       <p><b>Maria P.</b>
       <p>Ux Designer</p>
