--- a/Billow.html
+++ b/Billow.html
@@ -348,7 +348,7 @@
 </p>
 </section>
 <section class="brand-2">
-  <img class="logo-sketches" src="images/logosketches.png" alt="Billow Logo Sketches">
+  <img class="logo-sketches" src="images/logosketchesv2.png" alt="Billow Logo Sketches">
   <div class="bp-right">
   <img class="moodboard" src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
   <img src="images/billowbw.png" alt="Billow Black And White Logo">
