--- a/Billow.html
+++ b/Billow.html
@@ -124,12 +124,15 @@
         <p><a href="#">View results</a></p>
       </div>
       <div class="insights1">
-        <div class="ic1">
-          <div class="i1">
+          <img class="billow-insights" src="images/billow-insights.png" alt="Billow Insights">
+      <!--    <div class="ic1">
+
+        <div class="i1">
+
             <h2>85.5%</h2>
             <p>Use cloud storage</p>
           </div>
-  <div class="i2">
+   <div class="i2">
     <h3>47.1%</h3>
     <p>Are not satisfied with their current cloud storage service</p>
   </div>
@@ -137,8 +140,8 @@
     <h3>58.8%</h3>
     <p>Said that standard folder organization is very important</p>
   </div>
-        </div>
-<div class="ic2">
+</div> -->
+<!--<div class="ic2">
   <div class="i4">
     <p><b>Most important
   features:</b></p>
@@ -168,7 +171,7 @@
   </ul>
 </div>
 </div>
-</div>
+</div>-->
 
 
 
@@ -328,12 +331,15 @@
   <section class="ut-1">
   <h3>Usability Testing Round 1</h3>
   <p>This is where the iteration process began, the following are the key takeaways from this round:</p>
-  <p>- Main CTA on homepage must be revised it should probably make reference to each of the
-  membership tiers or to “learn more” or even “sign up now” so that users are not confused
-   or resist signing up because they assume they will be charged</p>
-<p>- Revise the wording on the upload window’s CTA it can say upload rather than open to avoid
-  confusion</p>
-  <p>- Adding file/folder information on the dashboard (list view) as suggested by Manuel</p>
+  <ul>
+    <li>Main CTA on homepage must be revised it should probably make reference to each of the
+    membership tiers or to “learn more” or even “sign up now” so that users are not confused
+     or resist signing up because they assume they will be charged</li>
+     <li>Revise the wording on the upload window’s CTA it can say upload rather than open to avoid
+       confusion</li>
+       <li>Adding file/folder information on the dashboard (list view) as suggested by Manuel</li>
+  </ul>
+
   </section>
 
 <section class="brand-1">
