--- a/Billow.html
+++ b/Billow.html
@@ -124,59 +124,21 @@
         <p><a href="#">View results</a></p>
       </div>
       <div class="insights1">
-          <img class="billow-insights" src="images/billow-insights.png" alt="Billow Insights">
-      <!--    <div class="ic1">
+
+      <div class="ic1">
 
         <div class="i1">
+    <img src="images/i1.png" alt="Insights 1">
 
-            <h2>85.5%</h2>
-            <p>Use cloud storage</p>
           </div>
    <div class="i2">
-    <h3>47.1%</h3>
-    <p>Are not satisfied with their current cloud storage service</p>
+       <img src="images/i2.png" alt="Insights 2">
   </div>
   <div class="i3">
-    <h3>58.8%</h3>
-    <p>Said that standard folder organization is very important</p>
+      <img src="images/i3.png" alt="Insights 3">
   </div>
-</div> -->
-<!--<div class="ic2">
-  <div class="i4">
-    <p><b>Most important
-  features:</b></p>
-  <ul>
-    <li>Cost</li>
-    <li>Uploading files</li>
-    <li>Creating content</li>
-  <li>Collaboration</li>
-  </ul>
 </div>
 
-<div class="i5">
-  <p><b>Frequent issues:</b></p>
-  <ul>
-    <li>Storage space</li>
-    <li>Too expensive</li>
-    <li>Trouble uploading and sharing files</li>
-  </ul>
-</div>
-
-<div class="i6">
-  <p><b>Most used features (on a weekly basis):</b></p>
-  <ul>
-    <li>Creating content</li>
-    <li>Sharing content</li>
-    <li>Collaborating</li>
-  </ul>
-</div>
-</div>
-</div>-->
-
-
-
-    <!--  </div>
-        <img class="insights" src="images/billow-insights.jpg" alt="Billow Insights" ></a> -->
     </section>
 
     <section class="user-personas">
