--- a/Contact.html
+++ b/Contact.html
@@ -85,8 +85,8 @@
             <!-- Copyright -->
           <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
           <div class="footer-right">
-            <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
-            <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+            <a href="https://github.com/julsrodd"><img src="images/github-icon.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="images/linkedin-icon.png" alt="linkedin"></a>
             <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
           </div>
           </section>
