--- a/About.html
+++ b/About.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Public+Sans:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/jrfavicon.png" sizes="50x50" type="image/png">
 </head>
 
 <script src="js/mobilenav.js"></script>
