updates to table section

--- a/Billow.html
+++ b/Billow.html
@@ -191,7 +191,7 @@
       the minimum viable product. Based on the user stories, I created user
       flows to show how users will complete these tasks. </p>
     </section>
-        <section class="table">
+    <section class="table">
           <table>
           <tr>
           <th>User Type</th>
@@ -244,7 +244,10 @@
           <td>Low</td>
           </tr>
         </table>
-        <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
+        <div class="user-flow">
+        <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>  
+        </div>
+
         </section>
 
 
