--- a/Billow.html
+++ b/Billow.html
@@ -81,9 +81,34 @@
       </div>
     </section>
 
+<!--<section class="prob-mock" >
+  <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
+</section> -->
+    <section class="problems1">
 
+      <div class="p1s-container">
+      <h2>Problem</h2>
+      <p>Current cloud storage services don’t offer a seamless or intuitive user
+      experience. Non-tech users are not considered, which results in hesitation
+      in using cloud storage services. Cloud storage solutions fail to reach
+      their full potential by not looking deeper into their capabilities and
+      exploring features like collaboration, link storage, organization, and
+      customization that optimize the collaborative process.
+      </div>
+    <div class="ps2-container">
+        <h2>Solution</h2>
+        <p>Billow is a cloud storage service that offers users the ability to
+        customize content organization by providing an initial folder setup
+        based on their needs as individuals, freelancers, or business teams. Users
+        are also able to create content like documents, sheets and notes, organize
+        content, uploading files as well as sharing and collaborating in real-time. These
+        solutions reduce the drag for users of having to figure out how to organize
+        their files and content as well as reducing the amount of external communication
+         with real-time collaboration tools.</p>
+    </div>
+    </section>
 
-    <section class="problem-banner">
+    <!-- <section class="problem-banner">
       <div class="p1-container">
       <h2>Problem</h2>
       </div>
@@ -110,7 +135,7 @@
       their files and content as well as reducing the amount of external communication
        with real-time collaboration tools.</p>
      </div>
-    </section>
+    </section> -->
 
 
     <section class="user-research">
@@ -245,7 +270,7 @@
           </tr>
         </table>
         <div class="user-flow">
-        <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>  
+        <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
         </div>
 
         </section>
