--- a/BusyBus.html
+++ b/BusyBus.html
@@ -24,7 +24,7 @@
   <body>
     <div class= "container">
     <section>
-      <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+      <a class="logo-icon" href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
       <a href="index.html#projects">Work</a>
       <a  class="active" href="About.html">About</a>
