--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
   <div class= "container">
   <section class="main-menu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
+    <a class="logo-icon" href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
     <nav class="topnav">
     <a href="index.html#projects">Work</a>
     <a href="About.html">About</a>
