--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- Top Navigation Menu -->
 <div class= "container">
 <section class="main-menu">
-  <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+  <a class="logo-icon" href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
   <nav class="topnav">
   <a class="active" href="#projects">Work</a>
   <a href="About.html">About</a>
