--- a/Billow.html
+++ b/Billow.html
@@ -26,7 +26,7 @@
     <a name="top"></a>
     <div class= "container">
     <section class="main-menu">
-      <a href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
+      <a class="logo-icon" href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
       <a href="index.html#projects">Work</a>
       <a href="About.html">About</a>
