--- a/Aldea-hub.html
+++ b/Aldea-hub.html
@@ -55,7 +55,7 @@
     <section class="billow-banner">
       <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" >
       <div class="b-container">
-        <h1> Billow </h1>
+        <h1> Aldea Hub </h1>
         <p>
         <b>Role</b> UX, Designer, Visual Designer, UX Research </p>
         <p><b>Tools</b> Figma, Invision, UsabilityHub</p>
