aldea hub updates

--- a/Aldea-hub.html
+++ b/Aldea-hub.html
@@ -53,7 +53,7 @@
 
 
     <section class="billow-banner">
-      <img class="mockup" src="images/billow-main.png" alt="Billow Mockup" >
+      <img class="mockup" src="images/aldea-mock1.png" alt="Billow Mockup" >
       <div class="b-container">
         <h1> Aldea Hub </h1>
         <p>
@@ -63,7 +63,7 @@
         User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
         Design </p>
         <br>
-        <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
+        <a href="https://www.figma.com/proto/nGgj2EY1GMyfEZ3tbCpaI4/Aldea-Hub-Prototype-Final?node-id=71411%3A10&viewport=365%2C893%2C0.034253187477588654&scaling=scale-down-width">View Prototype</a>
       </div>
     </section>
 
